force-app/main/default/objects/Race__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date of the Race.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>