force-app/main/default/objects/Race__c/fields/Podium_Second__c.field-meta.xml
<CustomField>
    <fullName>Podium_Second__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Podium Second</description>
    <inlineHelpText>Podium Second</inlineHelpText>
    <label>Podium Second</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Races (Podium Second)</relationshipLabel>
    <relationshipName>Races1</relationshipName>
    <type>Lookup</type>
</CustomField>