force-app/main/default/objects/Race__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <label>Track</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVUS</fullName>
            </value>
            <value>
                <fullName>Circuit de Monaco</fullName>
            </value>
            <value>
                <fullName>Mosport Park</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>