force-app/main/default/objects/Race__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1st place</description>
    <inlineHelpText>1st place</inlineHelpText>
    <label>Winner</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Races (Winner)</relationshipLabel>
    <relationshipName>Races</relationshipName>
    <type>Lookup</type>
</CustomField>