force-app/main/default/objects/Race__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Status__c</columns>
    <columns>Winner__c</columns>
    <columns>Track__c</columns>
    <columns>Laps__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>